<resources>
    <string name="app_name">familytree</string>

    <!--dialog-->
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="my_infomation">Thông tin về bạn</string>
    <string name="member_family">Các thành viên trong gia đình</string>
    <string name="father">Bố</string>
    <string name="mother">Mẹ</string>
    <string name="couple">Vợ/Chồng</string>
    <string name="son">Con trai</string>
    <string name="daughter">Con gái</string>
    <string name="brother">Anh/em trai</string>
    <string name="sisiter">Chị/em gái</string>
    <string name="wife">Vợ</string>
    <string name="husbband">Chồng</string>
    <string name="name">Tên: </string>
    <string name="avatar">Icon</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>

    <string name="delete">Xóa</string>


    <string-array name="number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
