<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center"
    >

    <TextView
        android:text="@string/member_family"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
            android:id="@+id/cb_father"
            android:text="@string/father"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />
        <CheckBox
            android:id="@+id/cb_mother"
            android:text="@string/mother"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/cb_couple"
        android:text="@string/couple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/daughter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/sp_daughter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/number"
            />
        <TextView
            android:text="@string/son"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/sp_son"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/number"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>