<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@android:color/white"
    >
    <TextView
        android:text="@string/my_infomation"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:text="@string/avatar"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_icon"
            android:src="@drawable/ic_member_1"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_icon"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <Button
        android:text="@string/save"
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>